Touchpad settings no longer applied on X11
Affected version
40.alpha (and earlier Git builds after the big "input thread" merge).
Only X11 is affected, seems to Wayland work fine. Previous version 3.38.2 wasn't affected.
Bug summary
Touchpad settings from GSettings are not applied, neither at login nor on change.
For example, gsettings get org.gnome.desktop.peripherals.touchpad speed
is set to 0.4, but xinput list-props
on the touchpad device still reports "libinput Accel Speed" to be zero. Likewise, "tap to click" and "natural scrolling" are not being activated.
Steps to reproduce
Upgrade to Mutter 40.alpha and GNOME Shell 40.alpha
Relevant logs, screenshots, screencasts etc.
There don't seem to be any log messages.