clutter/clutter/clutter-main.c
@@ -1894,8 +1894,10 @@ _clutter_process_event (ClutterEvent *event)
 {
   ClutterMainContext *context;
   ClutterActor *stage;
+  ClutterSeat *seat;
 
   context = _clutter_context_get_default ();
+  seat = clutter_backend_get_default_seat (context->backend);
 
   stage = CLUTTER_ACTOR (event->any.stage);
   if (stage == NULL)
@@ -1911,6 +1913,7 @@ _clutter_process_event (ClutterEvent *event)
   context->current_event = g_slist_prepend (context->current_event, event);
 
   _clutter_process_event_details (stage, context, event);
+  clutter_seat_handle_event_post (seat, event);
 
   context->current_event = g_slist_delete_link (context->current_event, context->current_event);
 }
